@@ -20,17 +20,21 @@
  */
 package org.cristalise.storage.jooqdb;
 
-import static org.cristalise.storage.jooqdb.JooqHandler.JOOQ_DISABLE_DOMAIN_CREATE;
-import static org.cristalise.storage.jooqdb.JooqHandler.JOOQ_DOMAIN_HANDLERS;
+import static org.cristalise.storage.jooqdb.JooqDataSourceHandler.retrieveContext;
 import static org.cristalise.storage.jooqdb.JooqHandler.getPrimaryKeys;
+import static org.cristalise.storage.jooqdb.SystemProperties.JOOQ_disableDomainCreateTables;
+import static org.cristalise.storage.jooqdb.SystemProperties.JOOQ_domainHandlers;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
+import java.sql.SQLException;
+import java.sql.SQLXML;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
 
 import org.apache.commons.lang3.StringUtils;
 import org.cristalise.kernel.common.PersistencyException;
@@ -38,8 +42,8 @@ import org.cristalise.kernel.entity.C2KLocalObject;
 import org.cristalise.kernel.lookup.ItemPath;
 import org.cristalise.kernel.persistency.ClusterStorage;
 import org.cristalise.kernel.persistency.ClusterType;
-import org.cristalise.kernel.process.Gateway;
-import org.cristalise.kernel.process.auth.Authenticator;
+import org.cristalise.kernel.persistency.TransactionKey;
+import org.cristalise.kernel.querying.Parameter;
 import org.cristalise.kernel.querying.Query;
 import org.cristalise.storage.jooqdb.clusterStore.JooqCollectionHadler;
 import org.cristalise.storage.jooqdb.clusterStore.JooqHistoryHandler;
@@ -50,7 +54,12 @@ import org.cristalise.storage.jooqdb.clusterStore.JooqOutcomeAttachmentHandler;
 import org.cristalise.storage.jooqdb.clusterStore.JooqOutcomeHandler;
 import org.cristalise.storage.jooqdb.clusterStore.JooqViewpointHandler;
 import org.jooq.DSLContext;
+import org.jooq.Field;
+import org.jooq.Record;
+import org.jooq.Result;
 import org.jooq.impl.DSL;
+import org.mvel2.templates.TemplateCompiler;
+import org.mvel2.templates.TemplateRuntime;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -60,13 +69,12 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class JooqClusterStorage extends ClusterStorage {
 
-    protected HashMap<ClusterType, JooqHandler>     jooqHandlers   = new HashMap<ClusterType, JooqHandler>();
-    protected List<JooqDomainHandler>               domainHandlers = new ArrayList<JooqDomainHandler>();
-    protected ConcurrentHashMap<Object, Connection> connectionMap  = new ConcurrentHashMap<Object, Connection>();
+    protected Map<ClusterType, JooqHandler> jooqHandlers   = new HashMap<ClusterType, JooqHandler>();
+    protected List<JooqDomainHandler>       domainHandlers = new ArrayList<JooqDomainHandler>();
 
     @Override
-    public void open(Authenticator auth) throws PersistencyException {
-        JooqHandler.readSystemProperties();
+    public void open() throws PersistencyException {
+        JooqDataSourceHandler.readSystemProperties();
         initialiseHandlers();
     }
 
@@ -89,11 +97,12 @@ public class JooqClusterStorage extends ClusterStorage {
 
         DSLContext context = retrieveContext(null);
 
-        if (!JooqHandler.readOnlyDataSource) {
-            context.transaction(nested -> {
-                for (JooqHandler handler : jooqHandlers.values())
-                    handler.createTables(DSL.using(nested));
+        if (!JooqDataSourceHandler.readOnlyDataSource) {
+            context.transaction(nestedConfig -> {
+                DSLContext nestedContext = DSL.using(nestedConfig);
+                for (JooqHandler handler : jooqHandlers.values()) handler.createTables(nestedContext);
             });
+
             initialiseDomainHandlers(context);
         }
     }
@@ -104,25 +113,24 @@ public class JooqClusterStorage extends ClusterStorage {
      * @throws PersistencyException Error during initialise ...
      */
     private void initialiseDomainHandlers(DSLContext context) throws PersistencyException {
+        String handlersCsv = JOOQ_domainHandlers.getString();
         try {
-            String handlers = Gateway.getProperties().getString(JOOQ_DOMAIN_HANDLERS, "");
-
-            for(String handlerClass: StringUtils.split(handlers, ",")) {
+            for(String handlerClass: StringUtils.split(handlersCsv, ",")) {
                 if (!handlerClass.contains(".")) handlerClass = "org.cristalise.storage."+handlerClass;
 
-                log.info("initialiseHandlers() - Instantiate domain handler:"+handlerClass);
+                log.info("initialiseDomainHandlers() - handler:{}", handlerClass);
 
-                domainHandlers.add( (JooqDomainHandler) Class.forName(handlerClass).newInstance());
+                domainHandlers.add( (JooqDomainHandler) Class.forName(handlerClass).getDeclaredConstructor().newInstance());
             }
         }
-        catch (InstantiationException | IllegalAccessException | ClassNotFoundException ex) {
-            log.error("JooqClusterStorage could not instantiate domain handler", ex);
-            throw new PersistencyException("JooqClusterStorage could not instantiate domain handler:"+ex.getMessage());
+        catch (InstantiationException | IllegalAccessException | ClassNotFoundException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException ex) {
+            throw new PersistencyException("Could not instantiate JooqDomainHandler:"+handlersCsv, ex);
         }
 
-        if (! Gateway.getProperties().getBoolean(JOOQ_DISABLE_DOMAIN_CREATE, false)) {
-            context.transaction(nested -> {
-                for (JooqDomainHandler handler: domainHandlers) handler.createTables(DSL.using(nested));
+        if (! JOOQ_disableDomainCreateTables.getBoolean()) {
+            context.transaction(nestedConfig -> {
+                DSLContext nestedContext = DSL.using(nestedConfig);
+                for (JooqDomainHandler handler: domainHandlers) handler.createTables(nestedContext);
             });
         }
     }
@@ -138,7 +146,7 @@ public class JooqClusterStorage extends ClusterStorage {
     @Override
     public void close() throws PersistencyException {
         log.info("close()");
-        JooqHandler.closeDataSource();
+        JooqDataSourceHandler.closeDataSource();
     }
 
     @Override
@@ -146,12 +154,6 @@ public class JooqClusterStorage extends ClusterStorage {
         retrieveContext(null).transaction(nested ->{
             for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.postBoostrap(DSL.using(nested));
         });
-
-        // after the the bootstrap the DataSource needs to be reset to its original config
-        if (!JooqHandler.readOnlyDataSource && !JooqHandler.autoCommit) {
-            //Restore data source with original auto-commit setting
-            JooqHandler.recreateDataSource(JooqHandler.autoCommit);
-        }
     }
 
     @Override
@@ -163,107 +165,58 @@ public class JooqClusterStorage extends ClusterStorage {
 
     @Override
     public void postConnect() throws PersistencyException {
-        // the DataSource need to be set to autocommit for the the bootstrap to work
-        if (!JooqHandler.readOnlyDataSource && !JooqHandler.autoCommit) {
-            //recreate a new DS with auto-commit forced to true
-            JooqHandler.recreateDataSource(true);
-        }
-
         retrieveContext(null).transaction(nested -> {
             for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.postConnect(DSL.using(nested));
         });
-
     }
 
     @Override
-    public void begin(Object transactionKey)  throws PersistencyException {
-        if (!JooqHandler.getDataSource().isAutoCommit() && transactionKey == null) {
-            throw new PersistencyException("transactionKey cannot be null when autoCommit is false");
-        }
-
-        log.debug("begin() - transactionKey:{}", transactionKey);
-
-        if (transactionKey != null) {
-            Connection conn = JooqHandler.connect().configuration().connectionProvider().acquire();
-            connectionMap.put(transactionKey, conn);
-        }
-        else {
-            log.warn("begin() called with a null transactionKey");
-        }
-    }
-
-    private DSLContext retrieveContext(Object transactionKey) throws PersistencyException {
-        log.trace("retrieveContext() - transactionKey:{}", transactionKey);
-
-        if (JooqHandler.getDataSource().isAutoCommit() || transactionKey == null) {
-            return JooqHandler.connect();
-        }
-        else {
-            Connection conn = connectionMap.get(transactionKey);
-            if (conn != null) return JooqHandler.connect(conn);
-        }
-
-        String msg = "Could not find JDBC connection for transactionKey:"+transactionKey;
-        log.error("retrieveContext() - {}", msg);
-        throw new PersistencyException(msg);
+    public void begin(TransactionKey transactionKey)  throws PersistencyException {
+        JooqDataSourceHandler.createConnection(transactionKey);
     }
 
     @Override
-    public void commit(Object transactionKey) throws PersistencyException {
-        if (!JooqHandler.getDataSource().isAutoCommit() && transactionKey == null) {
-            throw new PersistencyException("transactionKey cannot be null when autoCommit is false");
-        }
-
-        if (transactionKey == null) {
-            log.warn("commit() - Cannot retrieve connection because transactionKey is null");
-            return;
-        }
-
+    public void commit(TransactionKey transactionKey) throws PersistencyException {
         log.debug("commit() - transactionKey:{}", transactionKey);
 
         DSLContext context = retrieveContext(transactionKey);
 
         for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.commit(context, transactionKey);
 
+        Connection conn = JooqDataSourceHandler.removeConnection(transactionKey);
+        if (conn == null) return;
+
         try {
-            Connection conn = connectionMap.remove(transactionKey);
-            if (!JooqHandler.getDataSource().isAutoCommit()) {
+            if (!JooqDataSourceHandler.getDataSource().isAutoCommit()) {
               conn.commit();
             }
             conn.close();
         }
         catch (Exception e) {
-            log.error("", e);
+            log.error("commit()", e);
             throw new PersistencyException(e.getMessage());
         }
     }
 
     @Override
-    public void abort(Object transactionKey) throws PersistencyException {
-        if (!JooqHandler.getDataSource().isAutoCommit() && transactionKey == null) {
-            throw new PersistencyException("transactionKey cannot be null when autoCommit is false");
-        }
-
-        if (transactionKey == null) {
-            log.warn("abort() - Cannot retrieve connection because transactionKey is null");
-            return;
-        }
-
+    public void abort(TransactionKey transactionKey) throws PersistencyException {
         log.debug("abort() - transactionKey:{}", transactionKey);
 
         DSLContext context = retrieveContext(transactionKey);
 
         for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.abort(context, transactionKey);
 
+        Connection conn = JooqDataSourceHandler.removeConnection(transactionKey);
+        if (conn == null) return;
+
         try {
-            Connection conn = connectionMap.remove(transactionKey);
-            if (!JooqHandler.getDataSource().isAutoCommit()) {
+            if (!JooqDataSourceHandler.getDataSource().isAutoCommit()) {
                 conn.rollback();
             }
             conn.close();
         }
         catch (Exception e) {
-            log.error("", e);
+            log.error("abort()", e);
             throw new PersistencyException(e.getMessage());
         }
     }
@@ -280,21 +233,21 @@ public class JooqClusterStorage extends ClusterStorage {
     @Override
     public boolean checkQuerySupport(String language) {
         String lang = language.trim().toUpperCase();
-        return "SQL".equals(lang) || ("SQL:"+JooqHandler.dialect).equals(lang);
+        return "SQL".equals(lang) || ("SQL:"+JooqDataSourceHandler.dialect).equals(lang);
     }
 
     @Override
     public String getName() {
-        return "JOOQ:"+JooqHandler.dialect+" ClusterStorage";
+        return "JOOQ:"+JooqDataSourceHandler.dialect+" ClusterStorage";
     }
 
     @Override
     public String getId() {
-        return "JOOQ:"+JooqHandler.dialect;
+        return "JOOQ:"+JooqDataSourceHandler.dialect;
     }
     
     @Override
-    public int getLastIntegerId(ItemPath itemPath, String path, Object transactionKey) throws PersistencyException {
+    public int getLastIntegerId(ItemPath itemPath, String path, TransactionKey transactionKey) throws PersistencyException {
         DSLContext  context = retrieveContext(transactionKey);
         ClusterType cluster = getClusterType(path);
         JooqHandler handler = jooqHandlers.get(cluster);
@@ -305,23 +258,112 @@ public class JooqClusterStorage extends ClusterStorage {
         else if (cluster == ClusterType.HISTORY) {
             return ((JooqHistoryHandler)handler).getLastEventId(context, itemPath.getUUID());
         }
-        else if (cluster == ClusterType.JOB) {
-            return ((JooqJobHandler)handler).getLastJobId(context, itemPath.getUUID());
-        }
         else {
-            String msg = "Invalid ClusterType! Must be either HISTORY or JOB. Actual cluster:" + cluster;
+            String msg = "Invalid ClusterType! Must be HISTORY. Actual cluster:" + cluster;
             log.error("getLastIntegerId() - {}", msg);
             throw new PersistencyException(msg);
         }
     }
 
     @Override
-    public String executeQuery(Query query, Object transactionKey) throws PersistencyException {
-        throw new PersistencyException("UnImplemented");
+    public String executeQuery(Query query, TransactionKey transactionKey) throws PersistencyException {
+        if(!checkQuerySupport(query.getLanguage())) throw new PersistencyException("Unsupported query:"+query.getLanguage());
+
+        DSLContext context = retrieveContext(transactionKey);
+
+        Map<Object, Object> params = new HashMap<Object, Object>();
+
+        if (query.hasParameters()) {
+            for(Parameter p: query.getParameters()) {
+                if (p.getValue() != null) {
+                    log.debug("executeQuery() - param:'"+p.getName()+"' = '"+p.getValue()+"'");
+                    params.put(p.getName(), p.getValue());
+                }
+            }
+        }
+
+        String sql = query.getQuery();
+        sql = (String)TemplateRuntime.execute(TemplateCompiler.compileTemplate(sql), params);
+        Result<Record> result = context.fetch(sql);
+
+        if (result == null || result.size() == 0) {
+            return "<NULL/>";
+            //return "</"+query.getRootElement()+">";
+        }
+        else if (result.size() == 1) {
+            return convertRecord2Xml(result.get(0), query.getRecordElement());
+        }
+        else {
+            StringBuffer b = new StringBuffer("<"+query.getRootElement()+">");
+
+            for (Record rec: result) {
+                b.append(convertRecord2Xml(rec, query.getRecordElement()));
+            }
+
+            b.append("</"+query.getRootElement()+">");
+
+            return b.toString();
+        }
+    }
+
+    private String convertRecord2Xml(Record rec, String recordElement) throws PersistencyException {
+        if (rec.fields().length == 0) {
+            return "<"+recordElement+"/>";
+        }
+        else if (rec.fields().length == 1) {
+            Field<?> field = rec.fields()[0];
+            return convertField2Xml(field, rec.get(field));
+        }
+        else {
+            StringBuffer b = new StringBuffer("<"+recordElement+">");
+
+            for (Field<?> field: rec.fields()) {
+                b.append(convertField2Xml(field, rec.get(field)));
+            }
+
+            b.append("</"+recordElement+">");
+
+            return b.toString();
+        }
+    }
+
+    private String convertField2Xml(Field<?> field, Object value) throws PersistencyException {
+        StringBuffer b = new StringBuffer();
+
+        if (value == null) {
+            
+            //b.append("</"+field.getName()+">");
+        }
+        else if (value instanceof SQLXML) {
+            try {
+                b.append(((SQLXML)value).getString());
+            }
+            catch (SQLException e) {
+                log.error("Could not process SQLXML type of jdbc", e);
+                throw new PersistencyException(e.getMessage());
+            }
+        }
+        else if("XML".equals(field.getName().toUpperCase())) { //cristal-ise tables use field name 'XML'
+            b.append(value.toString());
+        }
+        else {
+            String stringValue = value.toString();
+
+            if (StringUtils.isEmpty(stringValue)) {
+                b.append("<"+field.getName()+"/>");
+            }
+            else {
+                b.append("<"+field.getName()+">")
+                .append(stringValue)
+                .append("</"+field.getName()+">");
+            }
+        }
+
+        return b.toString();
     }
 
     @Override
-    public ClusterType[] getClusters(ItemPath itemPath, Object transactionKey) throws PersistencyException {
+    public ClusterType[] getClusters(ItemPath itemPath, TransactionKey transactionKey) throws PersistencyException {
         ArrayList<ClusterType> result = new ArrayList<ClusterType>();
 
         for (ClusterType type:jooqHandlers.keySet()) {
@@ -332,7 +374,7 @@ public class JooqClusterStorage extends ClusterStorage {
     }
 
     @Override
-    public String[] getClusterContents(ItemPath itemPath, String path, Object transactionKey) throws PersistencyException {
+    public String[] getClusterContents(ItemPath itemPath, String path, TransactionKey transactionKey) throws PersistencyException {
         if (StringUtils.isBlank(path)) {
             ArrayList<String> result = new ArrayList<String>();
 
@@ -355,7 +397,7 @@ public class JooqClusterStorage extends ClusterStorage {
     }
 
     @Override
-    public C2KLocalObject get(ItemPath itemPath, String path, Object transactionKey) throws PersistencyException {
+    public C2KLocalObject get(ItemPath itemPath, String path, TransactionKey transactionKey) throws PersistencyException {
         UUID uuid = itemPath.getUUID();
 
         ClusterType cluster     = getClusterType(path);
@@ -377,8 +419,8 @@ public class JooqClusterStorage extends ClusterStorage {
     }
 
     @Override
-    public void put(ItemPath itemPath, C2KLocalObject obj, Object transactionKey) throws PersistencyException {
-        if (!JooqHandler.getDataSource().isAutoCommit() && transactionKey == null) {
+    public void put(ItemPath itemPath, C2KLocalObject obj, TransactionKey transactionKey) throws PersistencyException {
+        if (!JooqDataSourceHandler.getDataSource().isAutoCommit() && transactionKey == null) {
             throw new PersistencyException("transactionKey cannot be null when autoCommit is false");
         }
 
@@ -387,7 +429,7 @@ public class JooqClusterStorage extends ClusterStorage {
         JooqHandler handler = jooqHandlers.get(cluster);
         DSLContext  context = retrieveContext(transactionKey);
 
-        JooqHandler.logConnectionCount("JooqClusterStorage.put(before)", context);
+        JooqDataSourceHandler.logConnectionCount("JooqClusterStorage.put(before)", context);
 
         if (handler != null) {
             log.debug("put() - uuid:"+uuid+" cluster:"+cluster+" path:"+obj.getClusterPath());
@@ -399,12 +441,27 @@ public class JooqClusterStorage extends ClusterStorage {
         // Trigger all registered handlers to update domain specific tables
         for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.put(context, uuid, obj, transactionKey);
 
-        JooqHandler.logConnectionCount("JooqClusterStorage.put(after) ", context);
+        JooqDataSourceHandler.logConnectionCount("JooqClusterStorage.put(after) ", context);
     }
 
     @Override
-    public void delete(ItemPath itemPath, String path, Object transactionKey) throws PersistencyException {
-        if (!JooqHandler.getDataSource().isAutoCommit() && transactionKey == null) {
+    public void delete(ItemPath itemPath, TransactionKey transactionKey) throws PersistencyException {
+        log.debug("delete() - complete item:{}", itemPath);
+
+        for(ClusterType cluster: getClusters(itemPath, transactionKey)) {
+            delete(itemPath, cluster, transactionKey);
+        }
+    }
+
+    @Override
+    public void delete(ItemPath itemPath, ClusterType cluster, TransactionKey transactionKey) throws PersistencyException {
+        log.debug("delete() - item:{} cluster:{}", itemPath, cluster);
+        delete(itemPath, cluster.getName(), transactionKey);
+    }
+
+    @Override
+    public void delete(ItemPath itemPath, String path, TransactionKey transactionKey) throws PersistencyException {
+        if (!JooqDataSourceHandler.getDataSource().isAutoCommit() && transactionKey == null) {
             throw new PersistencyException("transactionKey cannot be null when autoCommit is false");
         }
 
@@ -415,14 +472,16 @@ public class JooqClusterStorage extends ClusterStorage {
         DSLContext  context     = retrieveContext(transactionKey);
 
         if (handler != null) {
-            log.debug("delete() - uuid:"+uuid+" cluster:"+cluster+" primaryKeys"+Arrays.toString(primaryKeys));
-            handler.delete(context, uuid, primaryKeys);
+            // Trigger DoimanHandlers first (issue: #656)
+            for (JooqDomainHandler domainHandler : domainHandlers) {
+                domainHandler.delete(context, uuid, cluster, primaryKeys, transactionKey);
+            }
+
+            int deletedCount = handler.delete(context, uuid, primaryKeys);
+            log.debug("delete() - DONE uuid:{} cluster:{} primaryKeys:{} deletedCount:{}", uuid, cluster, Arrays.toString(primaryKeys), deletedCount);
         }
         else {
             throw new PersistencyException("No handler found for cluster:'"+cluster+"'");
         }
-
-        // Trigger all registered handlers to update domain specific tables
-        for (JooqDomainHandler domainHandler : domainHandlers) domainHandler.delete(context, uuid, transactionKey, primaryKeys);
     }
 }
