@@ -20,17 +20,19 @@
  */
 package org.cristalise.kernel.scripting;
 
+import static org.cristalise.kernel.SystemProperties.Script_EngineOverride_$lang;
 import static org.cristalise.kernel.collection.BuiltInCollections.INCLUDE;
-import static org.cristalise.kernel.process.resource.BuiltInResources.SCRIPT_RESOURCE;
-import java.io.File;
+import static org.slf4j.helpers.MessageFormatter.format;
+
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.io.StringReader;
-import java.io.Writer;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
+
 import javax.script.Bindings;
 import javax.script.Compilable;
 import javax.script.CompiledScript;
@@ -42,6 +44,7 @@ import javax.script.ScriptException;
 import javax.script.SimpleScriptContext;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
+
 import org.apache.commons.lang3.StringUtils;
 import org.cristalise.kernel.collection.CollectionArrayList;
 import org.cristalise.kernel.collection.Dependency;
@@ -49,21 +52,29 @@ import org.cristalise.kernel.common.InvalidCollectionModification;
 import org.cristalise.kernel.common.InvalidDataException;
 import org.cristalise.kernel.common.ObjectAlreadyExistsException;
 import org.cristalise.kernel.common.ObjectNotFoundException;
-import org.cristalise.kernel.entity.agent.Job;
+import org.cristalise.kernel.entity.Job;
 import org.cristalise.kernel.entity.proxy.AgentProxy;
 import org.cristalise.kernel.entity.proxy.ItemProxy;
 import org.cristalise.kernel.graph.model.BuiltInVertexProperties;
 import org.cristalise.kernel.lookup.ItemPath;
+import org.cristalise.kernel.persistency.TransactionKey;
+import org.cristalise.kernel.persistency.outcome.Outcome;
 import org.cristalise.kernel.process.Gateway;
+import org.cristalise.kernel.process.resource.BuiltInResources;
 import org.cristalise.kernel.utils.CastorHashMap;
 import org.cristalise.kernel.utils.DescriptionObject;
 import org.cristalise.kernel.utils.FileStringUtility;
 import org.cristalise.kernel.utils.LocalObjectLoader;
+import org.mvel2.templates.CompiledTemplate;
+import org.mvel2.templates.TemplateCompiler;
+import org.mvel2.templates.TemplateRuntime;
+import org.w3c.dom.CDATASection;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.NodeList;
 import org.w3c.dom.Text;
 import org.xml.sax.InputSource;
+
 import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.Setter;
@@ -76,15 +87,29 @@ import lombok.extern.slf4j.Slf4j;
 @Accessors(prefix = "m") @Getter @Setter @Slf4j
 public class Script implements DescriptionObject {
 
+    static final String scriptTemplate = "/org/cristalise/kernel/utils/resources/templates/Script_xml.tmpl";
+
+    private static CompiledTemplate compiledScriptTemplate = null;
+
+    static {
+        try {
+            String templ = FileStringUtility.url2String(Script.class.getResource(scriptTemplate));
+            compiledScriptTemplate = TemplateCompiler.compileTemplate(templ);
+        }
+        catch (IOException e) {
+            // this case should never happen
+            e.printStackTrace();
+        }
+    }
+
     public static final String PARAMETER_AGENT   = "agent";
     public static final String PARAMETER_DB      = "db";
     public static final String PARAMETER_ITEM    = "item";
     public static final String PARAMETER_JOB     = "job";
-    public static final String PARAMETER_LOCKER  = "locker";
+    public static final String PARAMETER_LOCKER  = "transactionKey";
     public static final String PARAMETER_LOOKUP  = "lookup";
     public static final String PARAMETER_OUTPUT  = "output";
-    public static final String PARAMETER_ORB     = "orb";
-    public static final String PARAMETER_PROXY   = "proxy";
+    public static final String PARAMETER_VERTX   = "vertx";
     public static final String PARAMETER_STORAGE = "storage";
 
     public static final String SYSTEM_USER       = "system";
@@ -93,6 +118,7 @@ public class Script implements DescriptionObject {
     CompiledScript mCompScript = null;
     String         mScriptXML  = "";
 
+    String         mNamespace;
     String         mName;
     Integer        mVersion;
     ItemPath       mItemPath;
@@ -176,11 +202,7 @@ public class Script implements DescriptionObject {
      * @throws ScriptingEngineException
      */
     public Script(String lang, String expr, Class<?> returnType) throws ScriptingEngineException {
-        mName = "<expr>";
-        setScriptEngine(lang);
-        mVersion = null;
-        addOutput(null, returnType);
-        setScriptData(expr);
+        this(lang, "<expr>", expr, null, Object.class);
     }
 
     /**
@@ -192,10 +214,28 @@ public class Script implements DescriptionObject {
      * @param agent - the agentproxy to pass into the script as 'agent'
      */
     public Script(String lang, String name, String expr, AgentProxy agent) throws ScriptingEngineException {
-        this(lang, expr, Object.class);
+        this(lang, name, expr, agent, Object.class);
+    }
+
+    /**
+     * Creates a script executor requiring an agent to be set. Used by module event scripts.
+     * 
+     * @param lang - script language
+     * @param name - script name for debugging
+     * @param expr - the script to run
+     * @param agent - the agentproxy to pass into the script as 'agent'
+     */
+    public Script(String lang, String name, String expr, AgentProxy agent, Class<?> returnType) throws ScriptingEngineException {
         mName = name;
-        addInputParam(PARAMETER_AGENT, AgentProxy.class);
-        setInputParamValue(PARAMETER_AGENT, agent, true);
+        mVersion = null;
+        setScriptEngine(lang);
+        mName = name;
+        if (agent != null) {
+            addInputParam(PARAMETER_AGENT, AgentProxy.class);
+            setInputParamValue(PARAMETER_AGENT, agent, true);
+        }
+        addOutput(null, returnType);
+        setScriptData(expr);
     }
 
     /**
@@ -207,7 +247,7 @@ public class Script implements DescriptionObject {
      * @throws ScriptingEngineException
      */
     public Script(String lang, String expr) throws ScriptingEngineException {
-        this(lang, expr, Object.class);
+        this(lang, "<expr>", expr, null, Object.class);
     }
 
     /**
@@ -223,9 +263,8 @@ public class Script implements DescriptionObject {
 
         beans.put(PARAMETER_STORAGE, Gateway.getStorage());
         beans.put(PARAMETER_DB, Gateway.getStorage());
-        beans.put(PARAMETER_PROXY, Gateway.getProxyManager());
         beans.put(PARAMETER_LOOKUP, Gateway.getLookup());
-        beans.put(PARAMETER_ORB, Gateway.getORB());
+        beans.put(PARAMETER_VERTX, Gateway.getVertx());
         beans.put(PARAMETER_AGENT, agent);
         beans.put(PARAMETER_OUTPUT, out);
 
@@ -237,11 +276,11 @@ public class Script implements DescriptionObject {
 
         try {
             log.trace("Loaded consoleScript: {}", scriptText);
-            engine.put(ScriptEngine.FILENAME, "consoleScript init script");
+            engine.put(ScriptEngine.FILENAME, "consoleScript."+lang+".txt");
             engine.eval(scriptText);
         }
         catch (ScriptException ex) {
-            //out.println("Exception parsing console script for " + (ns == null ? "kernel" : ns + " module"));
+            out.println("Exception parsing console script for " + (mNamespace == null ? "kernel" : mNamespace + " module"));
             ex.printStackTrace(out);
         }
 
@@ -252,36 +291,36 @@ public class Script implements DescriptionObject {
      * Adds ItemProxy (object), AgentProxy (subject) and Job to the script input parameters and errors to the output parameters
      * even if these are not defined in the Script XML
      * 
-     * @param object ItemProxy representing the Item for the Job
-     * @param subject AgentProxy representing executing Agent
-     * @param job Job to be executed
+     * @param item for the Job
+     * @param agent the executing Agent
+     * @param job to be executed
      */
-    private void setActExecEnvironment(ItemProxy object, AgentProxy subject, Job job) 
+    private void setActExecEnvironment(ItemProxy item, AgentProxy agent, Job job) 
             throws ScriptingEngineException, InvalidDataException
     {
         isActExecEnvironment = true;
 
         // set environment - this needs to be well documented for script developers
         if (!mInputParams.containsKey(PARAMETER_ITEM)) {
-            log.debug("Item param not declared in Script "+getName()+" v"+getVersion());
+            log.debug("Parameter:{} was not declared in Script:{}", PARAMETER_ITEM, this);
             addInputParam(PARAMETER_ITEM, ItemProxy.class);
         }
-        setInputParamValue(PARAMETER_ITEM, object, true);
+        setInputParamValue(PARAMETER_ITEM, item, true);
 
         if (!mInputParams.containsKey(PARAMETER_AGENT)) {
-            log.debug("Agent param not declared in Script "+getName()+" v"+getVersion());
+            log.debug("Parameter:{} was not declared in Script:{}", PARAMETER_AGENT, this);
             addInputParam(PARAMETER_AGENT, AgentProxy.class);
         }
-        setInputParamValue(PARAMETER_AGENT, subject, true);
+        setInputParamValue(PARAMETER_AGENT, agent, true);
 
         if (!mInputParams.containsKey(PARAMETER_JOB)) {
-            log.debug("Job param not declared in Script "+getName()+" v"+getVersion());
+            log.debug("Parameter:{} was not declared in Script:{}", PARAMETER_JOB, this);
             addInputParam(PARAMETER_JOB, Job.class);
         }
         setInputParamValue(PARAMETER_JOB, job, true);
 
         if (!mOutputParams.containsKey("errors")) {
-            log.debug("Errors output not declared in Script "+getName()+" v"+getVersion());
+            log.debug("Output:errors was not declared in Script:{}", this);
             addOutput("errors", ErrorInfo.class);
         }
     }
@@ -292,11 +331,9 @@ public class Script implements DescriptionObject {
      * @param requestedLang the language
      */
     public void setScriptEngine(String requestedLang) throws ScriptingEngineException {
-        String lang = Gateway.getProperties().getString("OverrideScriptLang."+requestedLang, requestedLang);
+        ScriptEngineManager sem = new ScriptEngineManager(getClass().getClassLoader());
 
-        ScriptEngineManager sem = (ScriptEngineManager)Gateway.getProperties().getObject("Script.EngineManager");
-
-        if (sem == null) sem = new ScriptEngineManager(getClass().getClassLoader());
+        String lang = Script_EngineOverride_$lang.getString(requestedLang, requestedLang);
         engine = sem.getEngineByName(lang);
 
         if (engine == null) throw new ScriptingEngineException("No script engine for '"+lang+"' found.");
@@ -337,12 +374,12 @@ public class Script implements DescriptionObject {
      * @param scriptXML
      * @throws ScriptParsingException - when script is invalid
      */
-    private void parseScriptXML(String scriptXML) throws ScriptParsingException, ParameterException {
+    private synchronized void parseScriptXML(String scriptXML) throws ScriptParsingException, ParameterException {
         if (StringUtils.isBlank(scriptXML)) {
             log.warn("parseScriptXML - scriptXML was NULL!" );
             return;
         }
-        
+
         Document scriptDoc = null;
 
         // get the DOM document from the XML
@@ -352,7 +389,7 @@ public class Script implements DescriptionObject {
             scriptDoc = domBuilder.parse(new InputSource(new StringReader(scriptXML)));
         }
         catch (Exception ex) {
-            throw new ScriptParsingException("Error parsing Script XML", ex);
+            throw new ScriptParsingException("Error parsing XML for Script:"+this, ex);
         }
 
         parseScriptTag (scriptDoc.getElementsByTagName("script"));
@@ -366,7 +403,7 @@ public class Script implements DescriptionObject {
             Element output = (Element)outputList.item(i);
 
             if (!output.hasAttribute("type")) {
-                throw new ScriptParsingException("Script Output declaration incomplete, must have type");
+                throw new ScriptParsingException("Script:"+this+" Output declaration incomplete, must have type");
             }
 
             addOutput(output.getAttribute("name"), output.getAttribute("type"));
@@ -378,7 +415,7 @@ public class Script implements DescriptionObject {
             Element param = (Element)paramList.item(i);
 
             if (!(param.hasAttribute("name") && param.hasAttribute("type"))) {
-                throw new ScriptParsingException("Script Input Param incomplete, must have name and type");
+                throw new ScriptParsingException("Script:"+this+" Input Param incomplete, must have name and type");
             }
 
             addInputParam(param.getAttribute("name"), param.getAttribute("type"));
@@ -390,7 +427,7 @@ public class Script implements DescriptionObject {
             Element include = (Element)includeList.item(i);
 
             if (!(include.hasAttribute("name") && include.hasAttribute("version")))
-                throw new ScriptParsingException("Script include declaration incomplete, must have name and version");
+                throw new ScriptParsingException("Script:"+this+" include declaration incomplete, must have name and version");
 
             String includeName = include.getAttribute("name");
             String includeVersion =  include.getAttribute("version");
@@ -419,7 +456,9 @@ public class Script implements DescriptionObject {
     private void parseScriptTag(NodeList scriptList) throws ScriptParsingException {
         Element scriptElem = (Element)scriptList.item(0);
 
-        if (!scriptElem.hasAttribute("language")) throw new ScriptParsingException("Script data incomplete, must specify scripting language");
+        if (!scriptElem.hasAttribute("language")) {
+            throw new ScriptParsingException("Script:"+this+" data incomplete, must specify scripting language");
+        }
 
         log.debug("parseScriptTag() - Script Language: " + scriptElem.getAttribute("language"));
 
@@ -427,19 +466,29 @@ public class Script implements DescriptionObject {
             setScriptEngine(scriptElem.getAttribute("language"));
         }
         catch (ScriptingEngineException ex) {
-            throw new ScriptParsingException(ex.getMessage(), ex);
+            throw new ScriptParsingException(ex);
         }
 
         // get script source from CDATA
         NodeList scriptChildNodes = scriptElem.getChildNodes();
 
-        if (scriptChildNodes.getLength() != 1)
-            throw new ScriptParsingException("More than one child element found under script tag. Script characters may need escaping - suggest convert to CDATA section");
-        
-        if (scriptChildNodes.item(0) instanceof Text)
-            setScriptData(((Text) scriptChildNodes.item(0)).getData());
-        else
-            throw new ScriptParsingException("Child element of script tag was not text");
+        int cdataIdx = -1;
+
+        for (int i = 0; i < scriptChildNodes.getLength(); i++) {
+            if (scriptChildNodes.item(i) instanceof CDATASection) { 
+                cdataIdx = i;
+            }
+            else if (scriptChildNodes.item(i) instanceof Text) {
+                if (StringUtils.isNotBlank(((Text)scriptChildNodes.item(i)).getData())) {
+                    throw new ScriptParsingException("Script must be wrapped in CDATA - name:"+this+" element:"+scriptChildNodes.item(i));
+                }
+            }
+            else {
+                throw new ScriptParsingException("Child element of script tag was not text - name:"+this+" element:"+scriptChildNodes.item(i));
+            }
+        }
+
+        setScriptData(((Text)scriptChildNodes.item(cdataIdx)).getData());
 
         log.trace("parseScriptTag() - script:" + mScript);
     }
@@ -450,19 +499,19 @@ public class Script implements DescriptionObject {
      * @param type
      * @throws ParameterException
      */
-    protected void addInputParam(String name, String type) throws ParameterException {
+    public void addInputParam(String name, String type) throws ParameterException {
         try {
             addInputParam(name, Gateway.getResource().getClassForName(type));
         }
         catch (ClassNotFoundException ex) {
-            throw new ParameterException("Input parameter " + name + " specifies class " + type + " which was not found.", ex);
+            throw new ParameterException("Script:"+this+" Input parameter " + name + " specifies class " + type + " which was not found.", ex);
         }
     }
 
-    protected void addInputParam(String name, Class<?> type) throws ParameterException {
+    public void addInputParam(String name, Class<?> type) throws ParameterException {
         Parameter inputParam = new Parameter(name, type);
 
-        log.debug("ScriptExecutor.addInputParam() - declared parameter " + name + " (" + type + ")");
+        log.debug("addInputParam() - declared parameter " + name + " (" + type + ")");
         //add parameter to hashtable
         mInputParams.put(inputParam.getName(), inputParam);
         mAllInputParams.put(inputParam.getName(), inputParam);
@@ -483,8 +532,8 @@ public class Script implements DescriptionObject {
             if (existingParam.getType() == type)
                 return; // matches
             else // error
-                throw new ParameterException("Parameter conflict. Parameter'"+name+"' is declared as  "
-                        +existingParam.getType().getName()+" is declared in another script as "+type.getName());
+                throw new ParameterException("Script:"+this+" Parameter conflict. Parameter:'"+name+"' is declared as  "
+                        +existingParam.getType()+" is declared in another script as "+type);
         }
 
         Parameter inputParam = new Parameter(name);
@@ -500,12 +549,12 @@ public class Script implements DescriptionObject {
      * @param type
      * @throws ParameterException
      */
-    protected void addOutput(String name, String type) throws ParameterException {
+    public void addOutput(String name, String type) throws ParameterException {
         try {
             addOutput(name, Gateway.getResource().getClassForName(type));
         }
         catch (ClassNotFoundException ex) {
-            throw new ParameterException("Output parameter " + name + " specifies class " + type + " which was not found.", ex);
+            throw new ParameterException("Script:"+this+" Output parameter "+name+" specifies class "+type+" which was not found.", ex);
         }
     }
 
@@ -515,9 +564,9 @@ public class Script implements DescriptionObject {
      * @param type
      * @throws ParameterException
      */
-    protected void addOutput(String name, Class<?> type) throws ParameterException {
+    public void addOutput(String name, Class<?> type) throws ParameterException {
         if (mOutputParams.containsKey(name)) {
-            throw new ParameterException("Output parameter '"+name+"' declared more than once.");
+            throw new ParameterException("Script:"+this+" Output parameter '"+name+"' declared more than once.");
         }
 
         mOutputParams.put(name, new Parameter(name, type));
@@ -554,13 +603,12 @@ public class Script implements DescriptionObject {
         if (param != null) { // param is in this script
             if (value != null && !param.getType().isInstance(value)) {
                 throw new ParameterException( "Parameter "+name+" in script "+mName+" v"+mVersion+" is wrong type \n"+
-                        "Required: "+param.getType().toString()+"\n"+"Supplied: "+value.getClass().toString());
+                        "Required: "+param.getType()+"\n"+"Supplied: "+value.getClass());
             }
 
             Bindings bindings = context.getBindings(ScriptContext.ENGINE_SCOPE);
 
-            if (       ! bindings.containsKey(name) || bindings.get(name) == null
-                    || ( overwrite && value != null ) ) {
+            if (! bindings.containsKey(name) || bindings.get(name) == null || ( overwrite && value != null ) ) {
                 bindings.put(name, value);
 
                 log.debug("setInputParamValue() - " + name + ": " + value);
@@ -593,12 +641,12 @@ public class Script implements DescriptionObject {
      * @param itemPath
      * @param inputProps
      * @param actContext
-     * @param locker
+     * @param transactionKey
      * @return
      * @throws ScriptingEngineException
      */
-    public Object evaluate(ItemPath itemPath, CastorHashMap inputProps, String actContext, Object locker) throws ScriptingEngineException {
-        return evaluate(itemPath, inputProps, actContext, false, locker);
+    public Object evaluate(ItemPath itemPath, CastorHashMap inputProps, String actContext, TransactionKey transactionKey) throws ScriptingEngineException {
+        return evaluate(itemPath, inputProps, actContext, false, transactionKey);
     }
 
     /**
@@ -607,28 +655,26 @@ public class Script implements DescriptionObject {
      * @param itemPath the Item context
      * @param inputProps input properties
      * @param actContext activity path
-     * @param locker transaction locker
+     * @param transactionKey transaction transactionKey
      * @return the values returned by the Script
      */
-    public synchronized Object evaluate(ItemPath itemPath, CastorHashMap inputProps, String actContext, boolean actExecEnv, Object locker) 
+    public synchronized Object evaluate(ItemPath itemPath, CastorHashMap inputProps, String actContext, boolean actExecEnv, TransactionKey transactionKey) 
             throws ScriptingEngineException
     {
         try {
             //it is possible to execute a script outside of the context of an Item
-            ItemProxy item = itemPath == null ? null : Gateway.getProxyManager().getProxy(itemPath);
+            //on the other hand server side scripts are always executed with an Item context and transaction
+            ItemProxy item = itemPath == null ? null : Gateway.getProxy(itemPath, transactionKey);
 
             createEmptyContext();
-            
+
             if (actExecEnv) setActExecEnvironment(item, (AgentProxy)inputProps.get(PARAMETER_AGENT), (Job)inputProps.get(PARAMETER_JOB));
 
             for (String inputParamName: getAllInputParams().keySet()) {
                 if (inputProps.containsKey(inputParamName)) {
-                    setInputParamValue(inputParamName, inputProps.evaluateProperty(itemPath, inputParamName, actContext, locker), true);
+                    setInputParamValue(inputParamName, inputProps.evaluateProperty(itemPath, inputParamName, actContext, transactionKey), true);
                 }
             }
-
-            //server side scripts are always executed with an Item context
-            if (item != null) item.setTransactionKey(locker);
 
             if (getAllInputParams().containsKey(PARAMETER_ITEM) && getAllInputParams().get(PARAMETER_ITEM) != null) {
                 setInputParamValue(PARAMETER_ITEM, item, true);
@@ -636,12 +682,12 @@ public class Script implements DescriptionObject {
 
             //Set agent to be 'system' only if it was not set already
             if (getAllInputParams().containsKey(PARAMETER_AGENT) && getAllInputParams().get(PARAMETER_AGENT) != null) {
-                ItemProxy systemAgent = Gateway.getProxyManager().getProxy(Gateway.getLookup().getAgentPath(SYSTEM_USER));
+                ItemProxy systemAgent = Gateway.getProxy(Gateway.getLookup().getAgentPath(SYSTEM_USER, transactionKey), transactionKey);
                 setInputParamValue(PARAMETER_AGENT, systemAgent, false);
             }
 
             if (getAllInputParams().containsKey(PARAMETER_LOCKER) && getAllInputParams().get(PARAMETER_LOCKER) != null) {
-                setInputParamValue(PARAMETER_LOCKER, locker, true);
+                setInputParamValue(PARAMETER_LOCKER, transactionKey, true);
             }
 
             Object retVal = execute();
@@ -652,7 +698,9 @@ public class Script implements DescriptionObject {
             return retVal;
         }
         catch (Exception e) {
-            log.error("evaluate() - Script:" + getName(), e);
+            if (e instanceof ScriptingEngineException) throw (ScriptingEngineException)e;
+
+            log.error("evaluate() - Script:{}", this, e);
             throw new ScriptingEngineException(e);
         }
     }
@@ -660,8 +708,9 @@ public class Script implements DescriptionObject {
 
    /**
      * Executes the script with the submitted parameters. All declared input parameters should have been set first.
-     * It executes the included scripts first because they might set input parameters, for the actual Script
-     *
+     * It executes the included scripts first because they might set input parameters, for the actual Script.
+     * NOT thread-safe!!!!
+     * 
      * @return The return value depends on the way the output type was declared in the script xml.
      * <ul><li>If there was no output class declared then null is returned
      * <li>If a class was declared, but not named, then the object returned by the script is checked
@@ -678,12 +727,12 @@ public class Script implements DescriptionObject {
 
         //check input params
         for (Parameter thisParam : mInputParams.values()) {
-            if (!thisParam.getInitialised()) missingParams.append(thisParam.getName()).append("\n");
+            if (!thisParam.getInitialised()) missingParams.append(thisParam.toString()).append(",");
         }
 
         // croak if any missing
         if (missingParams.length() > 0) {
-            throw new ScriptingEngineException("Parameters were not set: \n" + missingParams.toString());
+            throw new ScriptingEngineException("Script:"+this+" - parameters were not set:" + missingParams.toString());
         }
 
         initOutputParams();
@@ -691,22 +740,20 @@ public class Script implements DescriptionObject {
         // run the script
         Object returnValue = null;
         try {
-            log.debug("execute() - Executing script:"+getName());
+            log.debug("execute() - Executing script:"+this);
             log.trace("Script:\n {}", mScript);
 
             if (engine == null) {
-                throw new ScriptingEngineException("Script engine not set. Cannot execute scripts.");
+                throw new ScriptingEngineException("Script:"+this+" - Engine not set. Cannot execute scripts.");
             }
-
-            engine.put(ScriptEngine.FILENAME, mName);
 
             if (mCompScript != null) returnValue = mCompScript.eval(context);
             else                     returnValue = engine.eval(mScript);
 
-            //log.debug("execute("+getName()+") - script returned '" + returnValue + "'");
+            //log.debug("execute("+this+") - script returned '" + returnValue + "'");
         }
-        catch (ScriptException ex) {
-            final String msg = "Error executing script " + getName() + ": " + ex.getCause().getMessage();
+        catch (Exception ex) {
+            final String msg = "Error executing script " + this + ": " + ex.getCause().getMessage();
             log.error(msg, ex.getCause());
 
             throw new ScriptingEngineException(msg, ex.getCause());
@@ -723,17 +770,17 @@ public class Script implements DescriptionObject {
     @SuppressWarnings("unchecked")
     private void executeIncludedScripts() throws ScriptingEngineException {
         for (Script importScript : mIncludes) {
-            log.debug("executeIncludedScripts() - name:"+importScript.getName()+" version:"+importScript.getVersion());
+            log.debug("executeIncludedScripts() - Script:{}", importScript);
 
             if (isActExecEnvironment) {
                 try {
                     importScript.setActExecEnvironment(
                              (ItemProxy)context.getAttribute(PARAMETER_ITEM),
-                            (AgentProxy)context.getAttribute(PARAMETER_AGENT), 
+                            (AgentProxy)context.getAttribute(PARAMETER_AGENT),
                                    (Job)context.getAttribute(PARAMETER_JOB));
                 }
                 catch (InvalidDataException e) {
-                    log.error("", e);
+                    log.error("executeIncludedScripts() - name:{}", importScript, e);
                     throw new ScriptingEngineException(e);
                 }
             }
@@ -742,18 +789,21 @@ public class Script implements DescriptionObject {
             importScript.setContext(context);
             Object output = importScript.execute();
 
+            // Output of included Script can be the input of 'parent' Script
             if (output != null && output instanceof Map) {
-                ((Map<String, Object>)output).forEach((outputKey, outputValue) -> {
-                    if (mInputParams.containsKey(outputKey)) {
+                for (Entry<String, Object> outputEntry: ((Map<String, Object>)output).entrySet()) {
+                    if (mInputParams.containsKey(outputEntry.getKey())) {
                         try {
-                            log.debug("executeIncludedScripts() - setting inputs for parameter:"+outputKey);
-                            setInputParamValue(outputKey, outputValue, true);
+                            log.debug("executeIncludedScripts() - Script:{} setting inputs for parameter:{}",mName , outputEntry.getKey());
+                            setInputParamValue(outputEntry.getKey(), outputEntry.getValue(), true);
                         }
-                        catch (ParameterException e) {
-                            log.error("", e);
+                        catch (ParameterException ex) {
+                            String msg = format("executeIncludedScripts() - Script:{} cannot set inputs for parameter:{}", mName, outputEntry.getKey()).getMessage();
+                            log.error(msg, ex);
+                            throw new ScriptingEngineException(msg, ex);
                         }
                     }
-                });
+                }
             }
         }
     }
@@ -766,15 +816,15 @@ public class Script implements DescriptionObject {
         for (Parameter outputParam : mOutputParams.values()) {
             if (StringUtils.isBlank(outputParam.getName())) continue; 
 
-            log.debug("initOutputParams() - Initialising output bean '" + outputParam.getName() + "'");
+            log.debug("initOutputParams() - Initialising output bean:{}", outputParam);
 
             Object emptyObject = null;
             try {
-                emptyObject = outputParam.getType().newInstance();
+                emptyObject = outputParam.getType().getDeclaredConstructor().newInstance();
             }
             catch (Exception e) {
                 //This case was originally not logged
-                log.warn("initOutputParams() - Failed to init output:{} error:{}", outputParam.getName(), e.getMessage());
+                log.warn("initOutputParams() - Script:{} Failed to init output:{} error:{}", mName, outputParam, e.getMessage());
             }
 
             context.getBindings(ScriptContext.ENGINE_SCOPE).put(outputParam.getName(), emptyObject);
@@ -795,9 +845,9 @@ public class Script implements DescriptionObject {
         // if no outputs are defined, return null
         if (mOutputParams.size() == 0) {
             if (returnValue != null)
-                log.trace("packScriptReturnValue("+getName()+") - No output params defined, returnValue is NOT null but it is discarded");
+                log.trace("packScriptReturnValue("+this+") - No output params defined, returnValue is NOT null but it is discarded");
             else
-                log.debug("packScriptReturnValue("+getName()+") - No output params defined. Returning null.");
+                log.debug("packScriptReturnValue("+this+") - No output params defined. Returning null.");
 
             return null;
         }
@@ -810,7 +860,7 @@ public class Script implements DescriptionObject {
             //no name was defined return the value, otherwise put it into a map
             if (StringUtils.isBlank(outputName)) {
                 if (returnValue != null && ! outputParam.getType().isInstance(returnValue))
-                    throw new ScriptingEngineException("Script returnValue was not instance of " + outputParam.getType().getName());
+                    throw new ScriptingEngineException("Script:"+this+" returnValue was not instance of " + outputParam.getType());
 
                 return returnValue;
             }
@@ -819,18 +869,18 @@ public class Script implements DescriptionObject {
 
                 if (output == null) {
                     if (! outputName.equals("errors")) {
-                        log.debug("packScriptReturnValue("+getName()+") - assigning script returnValue to named output '"+outputName+"'");
+                        log.debug("packScriptReturnValue("+this+") - assigning script returnValue to named output '"+outputName+"'");
 
                         if (returnValue != null && ! outputParam.getType().isInstance(returnValue))
-                            throw new ScriptingEngineException("Script returnValue was not instance of " + outputParam.getType().getName());
+                            throw new ScriptingEngineException("Script:"+this+" returnValue was not instance of " + outputParam.getType());
 
                         output = returnValue;
                     }
                     else
-                        log.debug("packScriptReturnValue("+getName()+") - return value for 'errors' is discarded");
+                        log.debug("packScriptReturnValue("+this+") - return value for 'errors' is discarded");
                 }
                 else if (! outputParam.getType().isInstance(output))
-                    throw new ScriptingEngineException("Script '"+getName()+"' returnValue was not instance of " + outputParam.getType().getName());
+                    throw new ScriptingEngineException("Script:"+this+" returnValue was not instance of " + outputParam.getType());
 
                 outputs.put(outputName, output);
                 return outputs;
@@ -843,16 +893,16 @@ public class Script implements DescriptionObject {
             for (Parameter outputParam : mOutputParams.values()) {
                 String outputName = outputParam.getName();
 
-                if (StringUtils.isBlank(outputName)) throw new ScriptingEngineException("Script "+getName()+" - All outputs must have a name.");
+                if (StringUtils.isBlank(outputName)) throw new ScriptingEngineException("Script:"+this+" - All outputs must have a name.");
 
                 //otherwise take data from the bindings using the output name
                 Object outputValue = context.getBindings(ScriptContext.ENGINE_SCOPE).get(outputParam.getName());
 
-                log.debug("packScriptReturnValue("+getName()+") - Output "+ outputName+"="+(outputValue==null ? "null" : outputValue.toString()));
+                log.debug("packScriptReturnValue({}) - Output {}={}", this, outputName, outputValue);
 
                 // check the class
                 if (outputValue != null && !(outputParam.getType().isInstance(outputValue)))  {
-                    throw new ScriptingEngineException("Script '"+getName()+"' output '"+outputName+"' was not null and it was not instance of " + outputParam.getType().getName() + ", it was a " + outputValue.getClass().getName());    
+                    throw new ScriptingEngineException("Script:"+this+" output '"+outputName+"' was not null and it was not instance of " + outputParam.getType() + ", it was a " + outputValue.getClass());
                 }
 
                 outputs.put(outputParam.getName(), outputValue);
@@ -865,18 +915,24 @@ public class Script implements DescriptionObject {
         mScript = script;
         if (engine instanceof Compilable) {
             try {
-                log.debug("setScriptData() - Compiling script "+mName);
-                engine.put(ScriptEngine.FILENAME, mName);
+                log.debug("setScriptData() - Compiling script:{}", mName);
+                engine.put(ScriptEngine.FILENAME, mName+"."+mLanguage.toLowerCase());
                 mCompScript = ((Compilable)engine).compile(mScript);
             }
             catch (ScriptException e) {
-                log.error("", e);
+                log.error("setScriptData() - name:{}", mName, e);
                 throw new ScriptParsingException(e);
             }
         }
     }
 
     public String getScriptData() {
+        try {
+            if (StringUtils.isBlank(mScriptXML)) mScriptXML = toXml();
+        }
+        catch (IOException e) {
+            log.error("getScriptData()", e);
+        }
         return mScriptXML;
     }
 
@@ -896,13 +952,30 @@ public class Script implements DescriptionObject {
      * @param version the version of the Script. If set to null
      * @return {@link Script}
      */
-    public static Script getScript(String name, Integer version) 
+    public static Script getScript(String name, Integer version)
+            throws ScriptingEngineException, ObjectNotFoundException, InvalidDataException
+    {
+        return getScript(name, version, null);
+    }
+
+    /**
+     * Resolves the Script object using its name and version. If Version is null tries to interpret the name 
+     * as an expression
+     * 
+     * @see BuiltInVertexProperties#ROUTING_EXPR
+     * 
+     * @param name the name of the Script Item or an expression
+     * @param version the version of the Script. If set to null
+     * @param transactionKey key of the transaction
+     * @return {@link Script}
+     */
+    public static Script getScript(String name, Integer version, TransactionKey transactionKey) 
             throws ScriptingEngineException, ObjectNotFoundException, InvalidDataException
     {
         if (StringUtils.isBlank(name)) throw new ScriptingEngineException("Script name is blank");
 
         if (version != null) {
-            return LocalObjectLoader.getScript(name, version);
+            return LocalObjectLoader.getScript(name, version, transactionKey);
         }
         else {
             // empty version: try expression
@@ -950,56 +1023,59 @@ public class Script implements DescriptionObject {
      * 
      */
     @Override
-    public CollectionArrayList makeDescCollections() throws InvalidDataException, ObjectNotFoundException {
+    public CollectionArrayList makeDescCollections(TransactionKey transactionKey) throws InvalidDataException, ObjectNotFoundException {
         CollectionArrayList retArr = new CollectionArrayList();
         Dependency includeColl = new Dependency(INCLUDE);
         for (Script script : mIncludes) {
             try {
-                includeColl.addMember(script.getItemPath());
+                includeColl.addMember(script.getItemPath(), transactionKey);
             }
             catch (InvalidCollectionModification e) {
-                log.error("Could not add "+script.getName()+" to description collection. ", e);
-                throw new InvalidDataException("Could not add "+script.getName()+" to description collection. "+e.getMessage());
+                log.error("Could not add "+script+" to description collection. ", e);
+                throw new InvalidDataException("Could not add Script:"+script+" to description collection. "+e.getMessage());
             }
             catch (ObjectAlreadyExistsException e) {	
-                log.error("Script "+script.getName()+" included more than once.", e);
-                throw new InvalidDataException("Script "+script.getName()+" included more than once.");
+                log.error("Script:{} included more than once.", script, e);
+                throw new InvalidDataException("Script:"+script+" included more than once.");
             } // 
         }
         retArr.put(includeColl);
         return retArr;
     }
 
-    /**
-     * 
-     */
     @Override
-    public void export(Writer imports, File dir, boolean shallow) throws IOException {
-        String tc = SCRIPT_RESOURCE.getTypeCode();
+    public String getXml(boolean prettyPrint) throws InvalidDataException {
+        if (prettyPrint) return new Outcome(getScriptData()).getData(true);
+        else             return getScriptData();
+    }
 
-        FileStringUtility.string2File(new File(new File(dir, tc), getName()+(getVersion()==null?"":"_"+getVersion())+".xml"), getScriptData());
-
-        if (imports == null) return;
-
-        if (Gateway.getProperties().getBoolean("Resource.useOldImportFormat", false)) {
-            imports.write("<Resource name='"+getName()+"' "
-                    +(getItemPath()==null?"":"id='"+getItemID()+"' ")
-                    +(getVersion()==null?"":"version='"+getVersion()+"' ")
-                    +"type='"+tc+"'>boot/"+tc+"/"+getName()
-                    +(getVersion()==null?"":"_"+getVersion())+".xml</Resource>\n");
-        }
-        else {
-            imports.write("<ScriptResource name='"+getName()+"' "
-                    + (getItemPath() == null ? "" : "id='"      + getItemID()  + "' ")
-                    + (getVersion()  == null ? "" : "version='" + getVersion() + "'")
-                    + "/>\n");
-        }
+    @Override
+    public BuiltInResources getResourceType() {
+        return BuiltInResources.SCRIPT_RESOURCE;
     }
 
     static public void main(String[] args) {
         for(ScriptEngineFactory sef: new ScriptEngineManager().getEngineFactories()) {
             System.out.println(sef.getEngineName()+" v"+sef.getEngineVersion()+" using "+sef.getLanguageName()+" v"+sef.getLanguageVersion()+" "+sef.getNames());
         }
-        System.out.println("Preferred javascript engine: "+new ScriptEngineManager().getEngineByName("javascript").getClass().getName());
+        System.out.println("Preferred javascript engine: "+new ScriptEngineManager().getEngineByName("javascript").getClass());
+    }
+
+    public String toXml() throws IOException {
+        Map<String, Object> vars = new HashMap<String, Object>();
+
+        vars.put("name", getName());
+        vars.put("language", getLanguage());
+        vars.put("includes", mIncludes);
+        vars.put("inputs", getInputParams().values());
+        vars.put("outputs", getOutputParams().values());
+        vars.put("script", mScript);
+
+        return (String) TemplateRuntime.execute(compiledScriptTemplate, vars);
+    }
+
+    @Override
+    public String toString() {
+        return getName() + (log.isDebugEnabled() ? "(v"+getVersion()+")" : "");
     }
 }
